--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     -->
     <title>Unsplash - Web</title>
   </head>
-  <body>
+  <body style='background-color: #f5f5f5!important;'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
